--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -17,4 +17,9 @@
     <li><strong>Кол-во книг со словом "город":</strong> {{ num_books_with_word }}</li>
   </ul>
 
+  <p>
+    You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{%
+    else %} times{% endif %}.
+  </p>
+
 {% endblock %}
